Add the Primary IMEI
As per GSMA specification TS37, below Primary IMEI requirements are mandatory to support

-TS37_2.2_REQ_5
-TS37_2.2_REQ_8 (Attached the document has description about this test cases)
Bug: 341006304
Test: atest MobileNetworkImeiPreferenceControllerTest

Change-Id: I839440de7d2680d21832dce6d0d56db992796fca

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11855,6 +11855,10 @@
     <string name="sim_onboarding_progressbar_turning_sim_on">Turning on <xliff:g id="carrier_name" example="Google Fi">%1$s</xliff:g>&#8230;</string>
     <!-- Title of service provider name(SPN) at mobile network settings page. [CHAR LIMIT=30] -->
     <string name="mobile_network_spn_title">Mobile network</string>
+    <!-- At the mobile network page, title for primary IMEI for multi-sim devices -->
+    <string name="imei_primary">IMEI (primary)</string>
+    <!-- At the mobile network page, title for primary MEID for multi-sim devices -->
+    <string name="meid_primary">MEID (primary)</string>
     <!-- Title of phone number at mobile network settings page. [CHAR LIMIT=30] -->
     <string name="mobile_network_phone_number_title">Phone number</string>
     <!-- Title of SIM label and color editor dialog at mobile network settings page. [CHAR LIMIT=30] -->
