--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1100,7 +1100,7 @@
     <string name="wifi_hotspot_speed_footer" msgid="8846939503916795002">"Si tu frecuencia preferida no está disponible, tu punto de acceso puede usar una diferente. La configuración de seguridad del punto de acceso puede cambiar si modificas la frecuencia."</string>
     <string name="wifi_hotspot_security_summary_unavailable" msgid="117582979310345853">"No disponible con 6 GHz"</string>
     <string name="wifi_hotspot_security_footer" msgid="4608329688744949796">"La configuración de seguridad puede cambiar si modificas la frecuencia del punto de acceso"</string>
-    <string name="wifi_hotspot_instant_title" msgid="7052526695338853703">"Punto de acceso instantáneo"</string>
+    <string name="wifi_hotspot_instant_title" msgid="7052526695338853703">"Conexión compartida instantánea"</string>
     <string name="wifi_hotspot_instant_summary_on" msgid="3142749148673081288">"Activado"</string>
     <string name="wifi_hotspot_instant_summary_off" msgid="8594065628453795615">"Desactivado"</string>
     <string name="wifi_tether_starting" msgid="8879874184033857814">"Activando Compartir Internet…"</string>
