--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -4039,7 +4039,7 @@
     <string name="data_warning_footnote" msgid="5991901765915710592">"L\'avertissement et la limite reposent sur les mesures effectuées par votre appareil. Celles-ci peuvent être différentes de celles de l\'opérateur."</string>
     <string name="set_data_limit" msgid="9010326815874642680">"Activer la limite"</string>
     <string name="data_limit" msgid="8731731657513652363">"Limite de données"</string>
-    <string name="data_usage_template" msgid="3822452362629968010">"<xliff:g id="ID_1">%1$s</xliff:g> utilisés : <xliff:g id="ID_2">%2$s</xliff:g>"</string>
+    <string name="data_usage_template" msgid="3822452362629968010">"<xliff:g id="ID_1">%1$s</xliff:g> utilisé(s) : <xliff:g id="ID_2">%2$s</xliff:g>"</string>
     <string name="configure" msgid="1499586749829665889">"Configurer"</string>
     <string name="data_usage_other_apps" msgid="5649047093607329537">"Autres applications incluses dans la consommation"</string>
     <string name="data_saver_unrestricted_summary" msgid="7343571401172437542">"{count,plural, =1{1 appli est autorisée à utiliser des données illimitées lorsque l\'Économiseur de données est activé}one{# appli est autorisée à utiliser des données illimitées lorsque l\'Économiseur de données est activé}other{# applis autorisées à utiliser des données illimitées lorsque l\'Économiseur de données est activé}}"</string>
