--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -3383,24 +3383,24 @@
     <string name="notification_history_open_notification" msgid="2655071846911258371">"адкрыць апавяшчэнне"</string>
     <string name="snooze_options_title" msgid="2109795569568344617">"Дазволіць адкладванне апавяшчэнняў"</string>
     <string name="notification_badging_title" msgid="5469616894819568917">"Значок апавяшчэнняў на значку праграмы"</string>
-    <string name="notification_bubbles_title" msgid="5681506665322329301">"Усплывальныя апавяшчэнні"</string>
-    <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"Усплывальныя апавяшчэнні"</string>
+    <string name="notification_bubbles_title" msgid="5681506665322329301">"Усплывальныя чаты"</string>
+    <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"Усплывальныя чаты"</string>
     <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"Паказваць гэту размову ў выглядзе ўсплывальных апавяшчэнняў"</string>
     <string name="bubbles_conversation_toggle_summary" msgid="720229032254323578">"Паказ рухомага значка паверх праграм"</string>
-    <string name="bubbles_feature_disabled_dialog_title" msgid="1794193899792284007">"Уключыць усплывальныя апавяшчэнні для прылады?"</string>
-    <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"Уключыўшы ўсплывальныя апавяшчэнні для гэтай праграмы, вы ўключыце іх таксама для прылады.\n\nГэта паўплывае на іншыя праграмы ці размовы, якія падтрымліваюць усплывальныя апавяшчэнні."</string>
+    <string name="bubbles_feature_disabled_dialog_title" msgid="1794193899792284007">"Уключыць усплывальныя чаты для прылады?"</string>
+    <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"Уключыўшы ўсплывальныя чаты для гэтай праграмы, вы ўключыце іх таксама для прылады.\n\nГэта паўплывае на іншыя праграмы ці размовы, якія падтрымліваюць усплывальныя чаты."</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"Уключыць"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"Скасаваць"</string>
     <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Уключана / Размовы могуць паказвацца ў выглядзе рухомых значкоў"</string>
-    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Дазволіць праграмам паказваць усплывальныя апавяшчэнні"</string>
+    <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Дазволіць праграмам паказваць усплывальныя чаты"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Некаторыя размовы будуць паказвацца як рухомыя значкі паверх іншых праграм"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"Усе размовы могуць паказвацца як усплывальныя апавяшчэнні"</string>
     <string name="bubble_app_setting_selected" msgid="4324386074198040675">"Дазволіць усплывальныя апавяшчэнні для выбраных размоў"</string>
     <string name="bubble_app_setting_none" msgid="8643594711863996418">"Не паказваць усплывальныя апавяшчэнні"</string>
     <string name="bubble_app_setting_selected_conversation_title" msgid="3060958976857529933">"Размовы"</string>
     <string name="bubble_app_setting_excluded_conversation_title" msgid="324818960338773945">"Для гэтых размоў не будуць паказвацца ўсплывальныя апавяшчэнні"</string>
-    <string name="bubble_app_setting_unbubble_conversation" msgid="1769789500566080427">"Выключыць усплывальныя апавяшчэнні для гэтай размовы"</string>
-    <string name="bubble_app_setting_bubble_conversation" msgid="1461981680982964285">"Уключыць усплывальныя апавяшчэнні для гэтай размовы"</string>
+    <string name="bubble_app_setting_unbubble_conversation" msgid="1769789500566080427">"Выключыць усплывальныя чаты для гэтай размовы"</string>
+    <string name="bubble_app_setting_bubble_conversation" msgid="1461981680982964285">"Уключыць усплывальныя чаты для гэтай размовы"</string>
     <string name="swipe_direction_ltr" msgid="5137180130142633085">"Правядзіце пальцам управа, каб закрыць, улева – каб паказаць меню"</string>
     <string name="swipe_direction_rtl" msgid="1707391213940663992">"Правядзіце пальцам улева, каб закрыць, управа – каб паказаць меню"</string>
     <string name="silent_notifications_status_bar" msgid="6113307620588767516">"Хаваць апавяшчэнні без гуку на панэлі стану"</string>
@@ -3444,7 +3444,7 @@
     <string name="priority_conversation_count_zero" msgid="3862289535537564713">"Няма прыярытэтных размоў"</string>
     <string name="priority_conversation_count" msgid="7291234530844412077">"{count,plural, =1{# прыярытэтная размова}one{# прыярытэтная размова}few{# прыярытэтныя размовы}many{# прыярытэтных размоў}other{# прыярытэтнай размовы}}"</string>
     <string name="important_conversations" msgid="1233893707189659401">"Прыярытэтныя размомы"</string>
-    <string name="important_conversations_summary_bubbles" msgid="614327166808117644">"Паказваць уверсе раздзела размоў у выглядзе рухомых усплывальных апавяшчэнняў"</string>
+    <string name="important_conversations_summary_bubbles" msgid="614327166808117644">"Паказваць уверсе раздзела размоў у выглядзе рухомых усплывальных чатаў"</string>
     <string name="important_conversations_summary" msgid="3184022761562676418">"Паказваць уверсе раздзела размоў"</string>
     <string name="other_conversations" msgid="551178916855139870">"Непрыярытэтныя размовы"</string>
     <string name="other_conversations_summary" msgid="3487426787901236273">"Размовы, у якія вы ўнеслі змяненні"</string>
@@ -3464,7 +3464,7 @@
     <string name="allow_interruption_summary" msgid="9044131663518112543">"Дазволіць праграме выкарыстоўваць гук, вібрацыю і/або ўсплываючыя апавяшчэнні на экране"</string>
     <string name="notification_priority_title" msgid="5554834239080425229">"Прыярытэт"</string>
     <string name="notification_channel_summary_priority" msgid="7225362351439076913">"Паказваецца ўверсе раздзела размоў як усплывальнае апавяшчэнне, паказвае відарыс профілю на экране блакіроўкі"</string>
-    <string name="convo_not_supported_summary" msgid="4285471045268268048">"<xliff:g id="APP_NAME">%1$s</xliff:g> не падтрымлівае большую частку функцый размоў. Вы не зможаце зрабіць размову прыярытэтнай, і размовы не будуць паказвацца ў выглядзе ўсплывальных апавяшчэнняў."</string>
+    <string name="convo_not_supported_summary" msgid="4285471045268268048">"<xliff:g id="APP_NAME">%1$s</xliff:g> не падтрымлівае большую частку функцый размоў. Вы не зможаце зрабіць размову прыярытэтнай, і размовы не будуць паказвацца ў выглядзе ўсплывальных чатаў."</string>
     <string name="notification_channel_summary_min" msgid="8823399508450176842">"Згарнуць апавяшчэнні ў адзін радок на панэлі апавяшчэнняў"</string>
     <string name="notification_channel_summary_low" msgid="5549662596677692000">"Без гуку ці вібрацыі"</string>
     <string name="notification_conversation_summary_low" msgid="6352818857388412326">"Паказваецца без гуку ці вібрацыі ў раздзеле размоў"</string>
