--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -2443,7 +2443,7 @@
     <string name="battery_tip_low_battery_summary" msgid="2629633757244297436">"ബാറ്ററി ലെെഫ് വർദ്ധിപ്പിക്കാൻ ബാറ്ററി സേവർ ഓണാക്കുക"</string>
     <string name="battery_tip_smart_battery_title" msgid="8925025450214912325">"ബാറ്ററി ലെെഫ് മെച്ചപ്പെടുത്തുക"</string>
     <string name="battery_tip_smart_battery_summary" msgid="3592965553502362965">"ബാറ്ററി മാനേജർ ഓണാക്കുക"</string>
-    <string name="battery_tip_early_heads_up_title" msgid="4411387863476629452">"ബാറ്ററി ലാഭിക്കൽ ഓണാക്കുക"</string>
+    <string name="battery_tip_early_heads_up_title" msgid="4411387863476629452">"ബാറ്ററി സേവർ ഓണാക്കുക"</string>
     <string name="battery_tip_early_heads_up_summary" msgid="578523794827443977">"സാധാരണയിലും നേരത്തെ ബാറ്ററി ചാർജ് തീർന്നേക്കാം"</string>
     <string name="battery_tip_early_heads_up_done_title" msgid="7705597228709143337">"ബാറ്ററി സേവർ ഓണാണ്"</string>
     <string name="battery_saver_link_a11y" msgid="6613079613524512257">"ബാറ്ററി സേവറിനെ കുറിച്ച് കൂടുതലറിയുക"</string>
@@ -2518,13 +2518,13 @@
     <string name="process_dex2oat_label" msgid="1190208677726583153">"ആപ്പ് ഓപ്റ്റിമൈസേഷന്‍"</string>
     <string name="process_network_tethering" msgid="6822671758152900766">"ടെതറിംഗ്"</string>
     <string name="process_removed_apps" msgid="6544406592678476902">"നീക്കം ചെയ്‌ത ആപ്പുകൾ"</string>
-    <string name="battery_saver" msgid="7737147344510595864">"ബാറ്ററി ലാഭിക്കൽ"</string>
+    <string name="battery_saver" msgid="7737147344510595864">"ബാറ്ററി സേവർ"</string>
     <string name="battery_saver_auto_title" msgid="6789753787070176144">"സ്വയമേവ ഓണാക്കുക"</string>
     <string name="battery_saver_auto_no_schedule" msgid="5123639867350138893">"ഷെഡ്യൂള്‍‌ ഒന്നുമില്ല"</string>
     <string name="battery_saver_auto_routine" msgid="4656495097900848608">"ദിനചര്യ അടിസ്ഥാനമാക്കി"</string>
     <string name="battery_saver_pref_auto_routine_summary" msgid="4739240095966241508">"നിങ്ങളുടെ ദിനചര്യയ്ക്കനുസരിച്ച് ഓണാക്കും"</string>
     <string name="battery_saver_auto_percentage" msgid="558533724806281980">"ശതമാനം അടിസ്ഥാനമാക്കി"</string>
-    <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"അടുത്ത ചാർജ് ചെയ്യലിന് മുമ്പായി നിങ്ങളുടെ ബാറ്ററിയുടെ ചാർജ് തീരാൻ സാധ്യതയുണ്ടെങ്കിൽ, ബാറ്ററി ലാഭിക്കൽ ഓണാകുന്നു"</string>
+    <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"അടുത്ത ചാർജ് ചെയ്യലിന് മുമ്പായി നിങ്ങളുടെ ബാറ്ററിയുടെ ചാർജ് തീരാൻ സാധ്യതയുണ്ടെങ്കിൽ, ബാറ്ററി സേവർ ഓണാകുന്നു"</string>
     <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"<xliff:g id="PERCENT">%1$s</xliff:g>-ത്തിൽ ഇത് ഓണാകും"</string>
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ഷെഡ്യൂള്‍‌ സജ്ജീകരിക്കുക"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ബാറ്ററി ലൈഫ് നീട്ടുക"</string>
@@ -2534,7 +2534,7 @@
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ഓണാക്കുക"</string>
-    <string name="battery_saver_master_switch_title" msgid="3474312070095834915">"ബാറ്ററി ലാഭിക്കൽ ഉപയോഗിക്കുക"</string>
+    <string name="battery_saver_master_switch_title" msgid="3474312070095834915">"ബാറ്ററി സേവർ ഉപയോഗിക്കുക"</string>
     <string name="battery_saver_turn_on_automatically_title" msgid="7857393318205740864">"സ്വയമേവ ഓണാക്കുക"</string>
     <string name="battery_saver_turn_on_automatically_never" msgid="6194649389871448663">"ഒരിക്കലും"</string>
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"<xliff:g id="PERCENT">%1$s</xliff:g> ബാറ്ററിയിൽ"</string>
@@ -3197,7 +3197,7 @@
     <string name="keywords_media_vibration" msgid="723896490102792327">"സ്‌പർശനങ്ങൾ, വൈബ്രേറ്റ് ചെയ്യൽ, സെൻസിറ്റിവിറ്റി, മീഡിയ"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"സ്‌പർശനം, വൈബ്രേറ്റ് ചെയ്യൽ, വൈബ്രേഷൻ"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"ബാറ്ററി ലാഭിക്കൽ, സ്‌റ്റിക്കി, നിലനിൽക്കുക, പവർ സേവർ, ബാറ്ററി"</string>
-    <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"ദിനചര്യ, ഷെഡ്യൂൾ, ബാറ്ററി ലാഭിക്കൽ, പവർ സേവർ, ബാറ്ററി, സ്വയമേവ, ശതമാനം"</string>
+    <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"ദിനചര്യ, ഷെഡ്യൂൾ, ബാറ്ററി സേവർ, പവർ സേവർ, ബാറ്ററി, സ്വയമേവ, ശതമാനം"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, വിപുലമായ കോളിംഗ്, 4g കോളിംഗ്"</string>
     <string name="keywords_nr_advanced_calling" msgid="4157823099610141014">"vo5g, vonr, വിപുലീകരിച്ച കോളിംഗ്, 5g കോളിംഗ്"</string>
     <string name="keywords_add_language" msgid="1882751300359939436">"ഭാഷ ചേർക്കുക, ഒരു ഭാഷ ചേർക്കുക"</string>
@@ -3990,7 +3990,7 @@
     <string name="condition_zen_title" msgid="7674761111934567490">"\'ശല്യപ്പെടുത്തരുത്\' ഓണാണ്"</string>
     <string name="condition_zen_summary_phone_muted" msgid="6516753722927681820">"ഫോൺ മ്യൂട്ട് ചെയ്‌തു"</string>
     <string name="condition_zen_summary_with_exceptions" msgid="9019937492602199663">"ഒഴിവാക്കലുകളോടുകൂടി"</string>
-    <string name="condition_battery_title" msgid="6395113995454385248">"ബാറ്ററി ലാഭിക്കൽ ഓണാണ്"</string>
+    <string name="condition_battery_title" msgid="6395113995454385248">"ബാറ്ററി സേവർ ഓണാണ്"</string>
     <string name="condition_battery_summary" msgid="8436806157833107886">"പരിമിതപ്പെടുത്തിയ ഫീച്ചറുകൾ"</string>
     <string name="condition_cellular_title" msgid="155474690792125747">"മൊബൈൽ ഡാറ്റ ഓഫാണ്"</string>
     <string name="condition_cellular_summary" msgid="1678098728303268851">"വൈഫൈ വഴി മാത്രമേ ഇന്‍റര്‍നെറ്റ് ലഭ്യമാകൂ"</string>
@@ -4154,7 +4154,7 @@
     <string name="dark_ui_mode_disabled_summary_dark_theme_on" msgid="4554134480159161533">"ബാറ്ററി സേവർ കാരണം തൽക്കാലം പ്രവർത്തനരഹിതമാണ്"</string>
     <string name="ambient_camera_summary_battery_saver_on" msgid="1787784892047029560">"ബാറ്ററി സേവർ കാരണം തൽക്കാലം പ്രവർത്തനരഹിതമാണ്"</string>
     <string name="ambient_camera_battery_saver_off" msgid="689825730569761613">"ബാറ്ററി സേവർ ഓഫാക്കുക"</string>
-    <string name="dark_ui_mode_disabled_summary_dark_theme_off" msgid="4154227921313505702">"ബാറ്ററി ലാഭിക്കൽ കാരണം താൽക്കാലികമായി ഓണാക്കി"</string>
+    <string name="dark_ui_mode_disabled_summary_dark_theme_off" msgid="4154227921313505702">"ബാറ്ററി സേവർ കാരണം താൽക്കാലികമായി ഓണാക്കി"</string>
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"ഡാർക്ക് തീം പരീക്ഷിക്കുക"</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"ബാറ്ററി ലെെഫ് വർദ്ധിപ്പിക്കാൻ സഹായിക്കുന്നു"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ദ്രുത ‌ക്രമീകരണ ഡെവലപ്പർ ടൈലുകൾ"</string>
