Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I0d49889374971412df625e1bfc1a65de6842f44d

--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -4569,10 +4569,10 @@
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"وقتی برنامه‌ها به نوشتار، تصویر، یا محتوای دیگری که کپی کرده‌اید دسترسی پیدا می‌کنند، پیامی نشان داده می‌شود"</string>
     <string name="all_apps" msgid="3054120149509114789">"همه برنامه‌ها"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"اجازه ندادن"</string>
-    <string name="uwb_settings_title" msgid="8578498712312002231">"‏باند فوق‌وسیع (UWB)"</string>
-    <string name="uwb_settings_summary" msgid="3074271396764672268">"به شناسایی موقعیت نسبی دستگاه‌های اطراف دارای باند فوق‌وسیع کمک می‌کند"</string>
-    <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"برای استفاده از باند فوق‌وسیع، «حالت هواپیما» را خاموش کنید"</string>
-    <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"باند فوق‌وسیع در مکان کنونی دردسترس نیست"</string>
+    <string name="uwb_settings_title" msgid="8578498712312002231">"‏«فراپهن‌باند» (UWB)"</string>
+    <string name="uwb_settings_summary" msgid="3074271396764672268">"به شناسایی موقعیت نسبی دستگاه‌های اطراف دارای «فراپهن‌باند» کمک می‌کند"</string>
+    <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"برای استفاده از «فراپهن‌باند»، «حالت هواپیما» را خاموش کنید"</string>
+    <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"«فراپهن‌باند» در مکان کنونی دردسترس نیست"</string>
     <string name="camera_toggle_title" msgid="8952668677727244992">"دسترسی به دوربین"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"دسترسی میکروفون"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"برای برنامه‌ها و سرویس‌ها"</string>
