--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -1552,7 +1552,7 @@
     <string name="default_emergency_app" msgid="1929974800666613803">"ଜରୁରୀକାଳୀନ ଆପ୍‌"</string>
     <string name="reset_app_preferences" msgid="8861758340732716573">"ଆପ ପସନ୍ଦଗୁଡ଼ିକୁ ରିସେଟ କରନ୍ତୁ"</string>
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"ଆପ ପସନ୍ଦଗୁଡ଼ିକୁ ରିସେଟ କରିବେ?"</string>
-    <string name="reset_app_preferences_desc" msgid="8550782670650158299">"ନିମ୍ନୋକ୍ତ ପାଇଁ ଏହା ସମସ୍ତ ପସନ୍ଦକୁ ରିସେଟ କରିବ:\n\n "<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ୍ସ"</li>\n<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକ"</li>\n<li>"କାର୍ଯ୍ୟଗୁଡ଼ିକ ପାଇଁ ଡିଫଲ୍ଟ ଆପ୍ଲିକେସନଗୁଡ଼ିକ"</li>\n<li>"ଆପ୍ସ ପାଇଁ ପୃଷ୍ଠପଟ ଡାଟା ପ୍ରତିବନ୍ଧକଗୁଡ଼ିକ"</li>\n<li>"ଯେ କୌଣସି ଅନୁମତି ପ୍ରତିବନ୍ଧକ"</li>\n<li>"ବ୍ୟାଟେରୀ ବ୍ୟବହାର ସେଟିଂସ"</li>\n\n"ଆପଣ କୌଣସି ଆପ ଡାଟା ହରାଇବେ ନାହିଁ।"</string>
+    <string name="reset_app_preferences_desc" msgid="8550782670650158299">"ନିମ୍ନୋକ୍ତ ପାଇଁ ଏହା ସମସ୍ତ ପସନ୍ଦକୁ ରିସେଟ କରିବ:\n\n "<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ୍ସ"</li>\n<li>"ଅକ୍ଷମ କରାଯାଇଥିବା ଆପ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକ"</li>\n<li>"କାର୍ଯ୍ୟଗୁଡ଼ିକ ପାଇଁ ଡିଫଲ୍ଟ ଆପ୍ଲିକେସନଗୁଡ଼ିକ"</li>\n<li>"ଆପ୍ସ ପାଇଁ ବେକଗ୍ରାଉଣ୍ଡ ଡାଟା ପ୍ରତିବନ୍ଧକଗୁଡ଼ିକ"</li>\n<li>"ଯେ କୌଣସି ଅନୁମତି ପ୍ରତିବନ୍ଧକ"</li>\n<li>"ବେଟେରୀ ବ୍ୟବହାର ସେଟିଂସ"</li>\n\n"ଆପଣ କୌଣସି ଆପ ଡାଟା ହରାଇବେ ନାହିଁ।"</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"ଆପ୍ସକୁ ରିସେଟ କରନ୍ତୁ"</string>
     <string name="filter" msgid="9039576690686251462">"ଫିଲ୍ଟର୍"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"ଫିଲ୍ଟର ବିକଳ୍ପ ବାଛନ୍ତୁ"</string>
